--- a/Backend/video-stream-app/src/main/resources/application.properties
+++ b/Backend/video-stream-app/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 
 
 files.video=videos/
+
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
